deployment/k8s/development/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hcl-playground-development
spec:
  selector:
    app: hcl-playground-development
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
