deployment/k8s/development/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hcl-playground-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-cert: "arn:aws:acm:us-east-1:386710959426:certificate/e4698b03-63d5-4133-a18a-7b692a41afd9"
spec:
  rules:
    - host: development.hcl-playground.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hcl-playground-development
                port:
                  number: 80
